--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,7 +18,7 @@ body {
     margin-top: 80px;
 }
 .topBar {
-    background-color: #0066cc;
+    background-color: #77C9D4;
     float: top;
     overflow: hidden;
     box-shadow: 0 0 5px 6px grey;
@@ -44,27 +44,27 @@ body {
     font-size: 20px;
 }
 .topBar a:hover {
-    background-color: #B7B8B6;
+    background-color: #015249;
     color: white;
 }
 .topBar .active a {
-    background-color: #B7B8B6;;
+    background-color: #015249;;
     color: white;
 }
 .background {
-    background: #99ccff;
+    background: #57BC90;
 }
 .introduction {
     margin: 0;
     padding-left: 10%;
     padding-top: 5%;
     font-size: 28px;
-    font-family: Optima, sans-serif;
+    font-family: American Typewriter, serif;
 }
 .position table {
     margin-left: 10%;
     font-size: 24px;
-    font-family: Optima, sans-serif;
+    font-family: American Typewriter, serif;
     border: 4px solid black;
     border-collapse: collapse;
 }
@@ -72,10 +72,17 @@ body {
     text-align: center;
     padding: 10px;
 }
+.me {
+    color: black;
+    font-family: Apple Chancery, cursive;
+}
+.myself {
+    margin-left: 6%;
+}
 .ending {
     margin: 0;
     font-size: 28px;
-    font-family: Optima, sans-serif;
+    font-family: American Typewriter, serif;
 }
 
 .pgTitle {
@@ -83,28 +90,30 @@ body {
     padding: 20px 0 0 0;
     background-image: url(https://www.stickpng.com/assets/images/58419d0aa6515b1e0ad75a6c.png);
     background-size: 38%;
-    background-color: #B3C100;
+    background-color: #A5A5AF;
     background-repeat: no-repeat;
-    background-position: 50% 50%;
+    background-position: 50% 100%;
 }
 .pgTitle h1 {
     color: #0080ff;
     font-size: 3em;
     font-weight: bold;
     margin-left: 32%;
+    margin-top: -1%;
 }
 .introduction-pg {
-    background-color: #4CB5F5;
+    background-color: #57BC90;
     padding-left: 10%;
     padding-top: 5%;
     font-size: 28px;
     font-family: Optima, sans-serif;
 }
 .introduction-pg h1{
-    color: #324851;
+    color: #F9BE02;
 }
 .description-pg {
-    color: #324851;
+    margin-right: 5%;
+    color: #F9BE02;
     font-size: 24px;
 }
 .description-pg table {
@@ -123,7 +132,7 @@ body {
     padding: 20px 0 0 0;
     background-image: url(https://www.logolynx.com/images/logolynx/s_ab/aba94a0b379e48c5784e22ef2f7d0237.png);
     background-size: 22%;
-    background-color: #B3C100;
+    background-color: #A5A5AF;
     background-repeat: no-repeat;
     background-position: 50% 50%;
 }
@@ -132,20 +141,21 @@ body {
     font-size: 3em;
     font-weight: bold;
     margin-left: 16%;
-    margin-top: 150px;
+    margin-top: 12%;
 }
 .introduction-sg {
-    background-color: #4CB5F5;
+    background-color: #57BC90;
     padding-left: 10%;
     padding-top: 5%;
     font-size: 28px;
     font-family: Optima, sans-serif;
 }
 .introduction-sg h1 {
-    color: #324851;
+    color: #F9BE02;
 }
 .description-sg {
-    color: #324851;
+    margin-right: 5%;
+    color: #F9BE02;
     font-size: 24px;
 }
 .description-sg table {
@@ -164,29 +174,30 @@ body {
     padding: 20px 0 0 0;
     background-image: url(https://i.ya-webdesign.com/images/nba-team-logos-png-3.png);
     background-size: 18%;
-    background-color: #B3C100;
+    background-color: #A5A5AF;
     background-repeat: no-repeat;
     background-position: 50% 50%;
 }
 .sfTitle h1 {
-    color: #324851;
+    color: #ff9900;
     font-size: 3em;
     font-weight: bold;
-    margin-left: 20%;
-    margin-top: 150px;
+    margin-left: 22%;
+    margin-top: 10%;
 }
 .introduction-sf {
-    background-color: #4CB5F5;
+    background-color: #57BC90;
     padding-left: 10%;
     padding-top: 5%;
     font-size: 28px;
     font-family: Optima, sans-serif;
 }
 .introduction-sf h1 {
-    color: #324851;
+    color: #F9BE02;
 }
 .description-sf {
-    color: #324851;
+    margin-right: 5%;
+    color: #F9BE02;
     font-size: 24px;
 }
 .description-sf table {
@@ -205,7 +216,7 @@ body {
     padding: 20px 0 0 0;
     background-image: url(https://www.stickpng.com/assets/images/58419cbca6515b1e0ad75a66.png);
     background-size: 40%;
-    background-color: #B3C100;
+    background-color: #A5A5AF;
     background-repeat: no-repeat;
     background-position: 50% 50%;
 }
@@ -217,17 +228,18 @@ body {
     margin-top: 22%;
 }
 .introduction-pf {
-    background-color: #4CB5F5;
+    background-color: #57BC90;
     padding-left: 10%;
     padding-top: 5%;
     font-size: 28px;
     font-family: Optima, sans-serif;
 }
 .introduction-pf h1 {
-    color: #324851;
+    color: #F9BE02;
 }
 .description-pf {
-    color: #324851;
+    margin-right: 5%;
+    color: #F9BE02;
     font-size: 24px;
 }
 .description-pf table {
@@ -246,29 +258,30 @@ body {
     padding: 20px 0 0 0;
     background-image: url(https://www.stickpng.com/assets/images/58419d0aa6515b1e0ad75a6c.png);
     background-size: 38%;
-    background-color: #B3C100;
+    background-color: #A5A5AF;
     background-repeat: no-repeat;
-    background-position: 50% 50%;
+    background-position: 50% 100%;
 }
 .cfTitle h1 {
     color: #0080ff;
     font-size: 3em;
     font-weight: bold;
     margin-left: 35%;
-    margin-top: 25px;
+    margin-top: -1%;
 }
 .introduction-cf {
-    background-color: #4CB5F5;
+    background-color: #57BC90;
     padding-left: 10%;
     padding-top: 5%;
     font-size: 28px;
     font-family: Optima, sans-serif;
 }
 .introduction-cf h1 {
-    color: #324851;
+    color: #F9BE02;
 }
 .description-cf {
-    color: #324851;
+    margin-right: 5%;
+    color: #F9BE02;
     font-size: 24px;
 }
 .description-cf table {
