--- a/stylesheet.css
+++ b/stylesheet.css
@@ -63,12 +63,14 @@ body {
 }
 .position table {
     margin-left: 10%;
+    margin-right: 10%;
     font-size: 24px;
     font-family: American Typewriter, serif;
     border: 4px solid black;
     border-collapse: collapse;
 }
 .position th {
+    background-color: rgb(180, 180, 180);
     text-align: center;
     padding: 10px;
 }
@@ -133,6 +135,7 @@ body {
     border-collapse: collapse;
 }
 .description-pg th, td {
+    background-color: #77C9D4;
     text-align: center;
     padding: 10px;
 }
@@ -175,6 +178,7 @@ body {
     border-collapse: collapse;
 }
 .description-sg th, td {
+    background-color: #77C9D4;
     text-align: center;
     padding: 10px;
 }
@@ -217,6 +221,7 @@ body {
     border-collapse: collapse;
 }
 .description-sf th, td {
+    background-color: #77C9D4;
     text-align: center;
     padding: 10px;
 }
@@ -259,6 +264,7 @@ body {
     border-collapse: collapse;
 }
 .description-pf th, td {
+    background-color: #77C9D4;
     text-align: center;
     padding: 10px;
 }
@@ -301,6 +307,7 @@ body {
     border-collapse: collapse;
 }
 .description-cf th, td {
+    background-color: #77C9D4;
     text-align: center;
     padding: 10px;
 }
